--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading text-white">We've got what you need!</h2>
             <hr class="light my-4">
-            <p class="text-faded mb-4">Start Bootstrap templates and themes on Start Bootstrap are open source, </p>
+            <p class="text-faded mb-4">Start Bootstrap templates  open source </p>
             <a class="btn btn-light btn-xl js-scroll-trigger" href="#services"> Started!</a>
           </div>
         </div>
@@ -88,7 +88,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading">At Your Service</h2>
+            <h2 class="section-heading"> Your Service</h2>
             <hr class="my-4">
           </div>
         </div>
@@ -120,7 +120,7 @@
             <div class="service-box mt-5 mx-auto">
               <i class="fas fa-4x fa-heart text-primary mb-3 sr-icon-4"></i>
               <h3 class="mb-3">Made with Love</h3>
-              <p class="text-muted mb-0">You have to make your websites with love these days!</p>
+              <p class="text-muted mb-0">You have to make your websites </p>
             </div>
           </div>
         </div>
