--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
     <section class="bg-dark text-white">
       <div class="container text-center">
         <h2 class="mb-4"> Start Bootstrap!</h2>
-        <a class="btn btn-light btn-xl sr-button" href=" clevertonk5@gmail.com ">bat Download Now Developer!</a>
+        <a class="btn btn-light btn-xl sr-button" href=" # ">bat Now Developer!</a>
       </div>
     </section>
 
@@ -243,7 +243,7 @@
         <div class="row">
           <div class="col-lg-4 ml-auto text-center">
             <i class="fas fa-phone fa-3x mb-3 sr-contact-1"></i>
-            <p>123-456-6789</p>
+            <p>+55 047 997511535/+55 047 34637948 </p>
           </div>
                <p>
               
