--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
                 </ul>
             </div>
         </section>
-        <div class="social ">
+        <div class="Social ">
             <ul>
                 <li>
                     <a target="_blank " href="http://www.facebook.com/sharer.php?u=https://fullstack-cleverton.github.io ">
