--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <!-- Custom styles for this template -->
     <link href="css/creative.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/estilo.css">
+    <link rel="stylesheet" href="css/Social/estilo.css">
     <link rel="stylesheet" href="css/Social/bar.css">
   </head>
 
