--- a/index.html
+++ b/index.html
@@ -2,14 +2,21 @@
 <html lang="en">
 
   <head>
-	  <link rel="stylesheet" href="css/estilo.css">
-          <link rel="stylesheet" href="css/Social/bar.css">
-
+	 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-
+    
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+	  
+	  
+	  
+	  
+	  
     <title>Creativa CRK </title>
 
     <!-- Bootstrap core CSS -->
@@ -26,7 +33,9 @@
     <!-- Custom styles for this template -->
     <link href="css/creative.min.css" rel="stylesheet">
    
-	   
+	  
+          <link rel="stylesheet" href="css/Social/bar.css">
+          <link rel="stylesheet" href="css/estilo.css"> 
 	  
 	  
 	  
