--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 	  
           <link rel="stylesheet" href="css/Social/bar.css">
           <link rel="stylesheet" href="css/estilo.css"> 
+	  <meta http-equiv="X-UA-Compatible" content="ie=edge">
 	  
 	  
 	  
