--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
         <div class="row">
           <div class="col-lg-10 mx-auto">
             <h1 class="text-uppercase">
-              <strong>Your Favorite Source of  Bootstrap Themes</strong>
+              <strong>Your xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx Favorite Source of  Bootstrap Themes</strong>
             </h1>
             <hr>
           </div>
           <div class="col-lg-8 mx-auto">
-            <p class="text-faded mb-5"> Bootstrap CSS framework!  template </p>
+            <p class="text-faded mb-5">xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx Bootstrap CSS framework!  template </p>
             <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
           </div>
         </div>
@@ -99,7 +99,7 @@
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading text-white">We've got what you need!</h2>
             <hr class="light my-4">
-            <p class="text-faded mb-4">Start Bootstrap templates  open source </p>
+            <p class="text-faded mb-4">xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxStart Bootstrap templates  open source </p>
             <a class="btn btn-light btn-xl js-scroll-trigger" href="#services"> Started!</a>
           </div>
         </div>
@@ -110,7 +110,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading"> Your Service</h2>
+            <h2 class="section-heading">xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx Your Service</h2>
             <hr class="my-4">
           </div>
         </div>
@@ -120,29 +120,29 @@
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fas fa-4x fa-gem text-primary mb-3 sr-icon-1"></i>
-              <h3 class="mb-3">Sturdy Templates</h3>
-              <p class="text-muted mb-0">Our templates are updated regularly so they don't break.</p>
+              <h3 class="mb-3">xxxxxxxxxxxxxxxxxxxxxxxxSturdy Templates</h3>
+              <p class="text-muted mb-0">xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxOur templates are updated regularly so they don't break.</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fas fa-4x fa-paper-plane text-primary mb-3 sr-icon-2"></i>
-              <h3 class="mb-3">Ready to Ship</h3>
-              <p class="text-muted mb-0">You can use this theme as is, or you can make changes!</p>
+              <h3 class="mb-3">Ready xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxto Ship</h3>
+              <p class="text-muted mb-0">xxxxxxxxxxxxxxxxxxxxxxxxxxYou can use this theme as is, or you can make changes!</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fas fa-4x fa-code text-primary mb-3 sr-icon-3"></i>
-              <h3 class="mb-3">Up to Date</h3>
-              <p class="text-muted mb-0">We update dependencies to keep things fresh.</p>
+              <h3 class="mb-3">Up toxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx Date</h3>
+              <p class="text-muted mb-0">We xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxupdate dependencies to keep things fresh.</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fas fa-4x fa-heart text-primary mb-3 sr-icon-4"></i>
-              <h3 class="mb-3">Made with Love</h3>
-              <p class="text-muted mb-0">You have to make your websites </p>
+              <h3 class="mb-3">Made with Lovexxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</h3>
+              <p class="text-muted mb-0">You have to make your websites xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</p>
             </div>
           </div>
         </div>
@@ -161,7 +161,7 @@
                     Category
                   </div>
                   <div class="project-name">
-                    Project Name
+                    Project Namexxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
                   </div>
                 </div>
               </div>
@@ -249,7 +249,7 @@
     <section class="bg-dark text-white">
       <div class="container text-center">
         <h2 class="mb-4"> Start Bootstrap!</h2>
-        <a class="btn btn-light btn-xl sr-button" href=" # ">bat Now Developer!</a>
+        <a class="btn btn-light btn-xl sr-button" href=" # "> xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxbat Now Developer!</a>
       </div>
     </section>
 
@@ -265,7 +265,7 @@
         <div class="row">
           <div class="col-lg-4 ml-auto text-center">
             <i class="fas fa-phone fa-3x mb-3 sr-contact-1"></i>
-            <p>+55 047 997511535 / recado 047-34637948 Cleverton Rocha </p>
+            <p>+55 047 997511535 Cleverton Rocha </p>
           </div>
                <p>
               
@@ -293,7 +293,7 @@
         </section>
 
         <section class="principal__projetos" id="projetos">
-            <h1 class="principal__projetos--titulo"> Works</h1>
+            <h1 class="principal__projetos--titulo"> Trabalhos</h1>
             <div class="container">
                 <ul class="principal__projetos--lista">
                     <li class="item">
