--- a/index.html
+++ b/index.html
@@ -81,7 +81,10 @@
         <div class="row">
           <div class="col-lg-10 mx-auto">
             <h1 class="text-uppercase">
-              <strong>Your xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx Favorite Source of  Bootstrap Themes</strong>
+              <strong> <div class="header__text-box">
+            <h1 class="heading__primary">
+                <span class="heading__primary--main">Cleverton Rocha</span>
+                <span class="heading__primary--sub"> Apaixonado por tecnologia, <span class="txt-type" data-wait="3000" data-words='["Front End"," Back End "," Desenhista Projetista 3D "," músico "]'></span>      </strong>
             </h1>
             <hr>
           </div>
