--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
         <div class="row">
           <div class="col-lg-10 mx-auto">
             <h1 class="text-uppercase">
-              <strong> <div class="header__text-box">
+              <div class="header__text-box">
             <h1 class="heading__primary">
-                <span class="heading__primary--main">Cleverton Rocha</span>
-                <span class="heading__primary--sub"> Apaixonado por tecnologia, <span class="txt-type" data-wait="3000" data-words='["Front End"," Back End "," Desenhista Projetista 3D "," músico "]'></span>      </strong>
+                
+                <span class="heading__primary--sub"> Apaixonado por tecnologia, <span class="txt-type" data-wait="3000" data-words='["Front End"," Back End "," Desenhista Projetista 3D "," músico "]'></span>      
             </h1>
             <hr>
           </div>
