--- a/index.html
+++ b/index.html
@@ -103,16 +103,15 @@
     </nav>
 
     <header class="masthead text-center text-white d-flex"
-      <div class="container my-auto"
-        <div class="row"
-          <div class="col-lg-10 mx-auto"
+      <div class="container my-auto">
+        <div class="row">
+          <div class="col-lg-10 mx-auto">
             
               <div class="header__text-box">
             <h1 class="heading__primary">
-                              <span class="heading__primary--sub">  ♥ Apaixonado por tecnologia, <span class="txt-type" data-wait="3000" data-words='["Front End","Back End","Desenhista Projetista 3D","músico"]'></span>      
+                              <span class="heading__primary--sub"> ♥ Apaixonado por tecnologia, <span class="txt-type" data-wait="3000" data-words='["Front End","Back End","Desenhista Projetista 3D","músico"]'></span>      
             </h1>
-            <hr>
-          </div>
+                      </div>
           <div class="col-lg-8 mx-auto">
             <p class="text-faded mb-5">CSS em framework templates </p>
             <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">More</a>
