--- a/index.html
+++ b/index.html
@@ -109,12 +109,12 @@
             
               <div class="header__text-box">
             <class="heading__primary">
-                              <span class="heading__primary--sub"> ♥ Apaixonado por tecnologia <span class="txt-type" data-wait="3000" data-words='["Front End","Back End","Desenhista Projetista 3D","músico"]'></span>      
+                              <span class="heading__primary--sub"><span class="txt-type" data-wait="3000" data-words='["Front End","Back End","Desenhista Projetista 3D","músico"]'></span>      
             
                       </div>
 		  <div class="container">  
           <div class="col-lg-8 mx-auto">
-            <p class="text-faded mb-5">CSS em framework templates </p>
+            <p class="text-faded mb-5">CSs3 templates </p>
             <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">More</a>
           </div>
         </div>
