--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
                       </div>
 		  <div class="container">  
           <div class="col-lg-8 mx-auto">
-            <p class="text-faded mb-5">CSs3 templates </p>
-            <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">More</a>
+            <p class="text-faded mb-5"> templates </p>
+            <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about"> Veja Mais</a>
           </div>
         </div>
       </div>
