--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
 
     <section class="bg-dark text-white">
       <div class="container text-center">
-        <h2 class="mb-4"> Start Donwload!? </h2>
+        <h2 class="mb-4"> Start Download!? </h2>
         <a class="btn btn-light btn-xl sr-button" href=" # "> bat Now Developer!</a>
       </div>
     </section>
@@ -283,7 +283,7 @@
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading">Let's Get In Touch!</h2>
-            <hr class="my-4">
+           
             <p class="mb-5"> próximo projeto conosco? Isso é ótimo! Ligue para nós ou envie-nos um e-mail e entraremos em contato o mais breve possível!CkR-Programadores</p>
           </div>
         </div>
@@ -321,9 +321,26 @@
         </section>
 
         <section class="principal__projetos" id="projetos">
-            <h1 class="principal__projetos--titulo">Port/Tecnologia </h1>
+            <h1 class="principal__projetos--titulo"> Port/Tecnologias </h1>
             <div class="container">
                 <ul class="principal__projetos--lista">
+			
+			
+			 <li class="item">
+                        <a href="https://fullstack-cleverton.github.io/" target="_blank" rel="noopener noreferrer">
+                            <figure>
+                                <img src="  " alt=" Deployer ">
+                                <figcaption>  Site/Portifolio  nao responvivo esclusivo para DeskTop  </figcaption>
+                            </figure>
+                        </a>
+                    </li>
+								
+			
+			
+			
+			
+			
+			
                     <li class="item">
                         <a href="https://desenvolvedoricotrade.github.io/HexoDeployer/" target="_blank" rel="noopener noreferrer">
                             <figure>
