--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                         <a href="https://fullstack-cleverton.github.io/" target="_blank" rel="noopener noreferrer">
                             <figure>
                                 <img src="  " alt=" Deployer ">
-                                <figcaption>  Site/Portifolio  nao responvivo esclusivo para DeskTop  </figcaption>
+                                <figcaption>  Site/Portifolio (nao é responsivo) esclusivo para DeskTop  </figcaption>
                             </figure>
                         </a>
                     </li>
