--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	  
 	  
 	  
-    <title> Criativa CRK </title>
+    <title> CRK </title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -48,7 +48,7 @@
 	<div class="social ">
             <ul>
                <ul>
-			<li><a href="https://premiumwebclever.github.io/FullStackJoinville" target="_blank" class="icon-acebook">New Portifólio</a></li>
+			<li><a href="https://premiumwebclever.github.io/FullStackJoinville" target="_blank" class="icon-acebook">Escondendo o Codigo Fonte</a></li>
 			<li><a href="https://wa.me/554797511535" class="https://img.icons8.com/nolan/2x/whatsapp.png"> Whatsapp</a></li>
 			<li><a href="mailto:clevertonk5@gmail.com" class="icon-mail">Email</a></li>
 			<li><a href="" target="_blank" class="icon-facebook">Facebook</a></li>
