--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
                       </div>
 		  <div class="container">  
           <div class="col-lg-8 mx-auto">
-            <p class="text-faded mb-5"> templates </p>
-            <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about"> Veja Mais </a>
+            <p class="text-faded mb-5"> CKR </p>
+            <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about"> Seguir em Frente </a>
           </div>
         </div>
       </div>
@@ -330,7 +330,7 @@
                         <a href="https://fullstack-cleverton.github.io/" target="_blank" rel="noopener noreferrer">
                             <figure>
                                 <img src="  " alt=" Deployer ">
-                                <figcaption>  Site/Portifolio (nao é responsivo) esclusivo para DeskTop  </figcaption>
+                                <figcaption>   Um kit de interface Bootstrap 4 com base no material design.  </figcaption>
                             </figure>
                         </a>
                     </li>
@@ -345,7 +345,7 @@
                         <a href="https://desenvolvedoricotrade.github.io/HexoDeployer/" target="_blank" rel="noopener noreferrer">
                             <figure>
                                 <img src="https://raw.githubusercontent.com/fullstack-cleverton/fullstack-cleverton.github.io/master/img/MZChbhi.gif" alt="Hexo Deployer ">
-                                <figcaption> framework para blogs </figcaption>
+                                <figcaption> Pequeno Site desenvolvido com framework HexoDeployer  </figcaption>
                             </figure>
                         </a>
                     </li>
@@ -357,7 +357,7 @@
                             <figure>
                                 <img src="https://raw.githubusercontent.com/fullstack-cleverton/fullstack-cleverton.github.io/master/img/Capturar.PNG " alt="Angular">
                                 <figcaption>
-                                    front-end baseado em TypeScript React
+                                    front-end TypeScript React
                                 </figcaption>
                             </figure>
                         </a>
@@ -369,17 +369,17 @@
                         <a href"https://premiumwebclever.github.io" target="_blank" rel="noopener noreferrer">
                             <figure>
                                 <img src=" https://raw.githubusercontent.com/fullstack-cleverton/fullstack-cleverton.github.io/master/img/redes-sociais.jpg  ">
-                                <figcaption>Em Breve! Aplicação Rede Social para busca de perfis e informações de usuários</figcaption>
+                                <figcaption>Em Breve! Rede Social </figcaption>
                             </figure>
                         </a>
                     </li>
 
                     <li class="item">
-                        <a href=" https://desenvolvedoricotrade.github.io/creative/ " target="_blank " rel="noopener noreferrer ">
+                        <a href="" target="_blank " rel="noopener noreferrer ">
                             <figure>
-                                <img src="https://raw.githubusercontent.com/fullstack-cleverton/fullstack-cleverton.github.io/master/img/Capturar.PNG%20777.PNG " alt="Site  ">
+                                <img src=" PNG " alt="Site  ">
                                 <figcaption>
-                                    Html5 BootStrap css3
+                                     em desenvolvimento Loja Virtual 
                                 </figcaption>
                             </figure>
                         </a>
