--- a/index.html
+++ b/index.html
@@ -312,10 +312,7 @@
     <!-- Custom scripts for this template -->
     <script src="js/creative.min.js"></script>
   
-     <h1 class="heading__primary">
-                <span class="heading__primary--main">Cleverton Rocha</span>
-                <span class="heading__primary--sub"> Apaixonado por tecnologia, <span class="txt-type" data-wait="3000" data-words='["Front End"," Back End "," Desenhista Projetista 3D "," músico "]'></span>
-            </h1>
+    
                     
 
         </section>
@@ -345,7 +342,7 @@
                         <a href="https://desenvolvedoricotrade.github.io/HexoDeployer/" target="_blank" rel="noopener noreferrer">
                             <figure>
                                 <img src="https://raw.githubusercontent.com/fullstack-cleverton/fullstack-cleverton.github.io/master/img/MZChbhi.gif" alt="Hexo Deployer ">
-                                <figcaption> Pequeno Site desenvolvido com framework HexoDeployer  </figcaption>
+                                <figcaption> framework HexoDeployer  </figcaption>
                             </figure>
                         </a>
                     </li>
@@ -369,17 +366,17 @@
                         <a href"https://premiumwebclever.github.io" target="_blank" rel="noopener noreferrer">
                             <figure>
                                 <img src=" https://raw.githubusercontent.com/fullstack-cleverton/fullstack-cleverton.github.io/master/img/redes-sociais.jpg  ">
-                                <figcaption>Em Breve! Rede Social </figcaption>
+                                <figcaption>Em Breve! Rede Social</figcaption>
                             </figure>
                         </a>
                     </li>
 
                     <li class="item">
-                        <a href="" target="_blank " rel="noopener noreferrer ">
+                        <a href="https://fullstack-cleverton.github.io/Loja_Virtual/#" target="_blank " rel="noopener noreferrer ">
                             <figure>
                                 <img src=" PNG " alt="Site  ">
                                 <figcaption>
-                                     em desenvolvimento Loja Virtual 
+                                     Loja Virtual 
                                 </figcaption>
                             </figure>
                         </a>
