--- a/index.html
+++ b/index.html
@@ -323,6 +323,21 @@
                 <ul class="principal__projetos--lista">
 			
 			
+			<li class="item">
+                        <a href="https://fullstack-cleverton.github.io/Negocio-casual/" target="_blank" rel="noopener noreferrer">
+                            <figure>
+                                <img src="  " alt=" Deployer ">
+                                <figcaption> Para Negocios Casuais  </figcaption>
+                            </figure>
+                        </a>
+                    </li>
+			
+			
+			
+			
+			
+			
+			
 			 <li class="item">
                         <a href="https://fullstack-cleverton.github.io/" target="_blank" rel="noopener noreferrer">
                             <figure>
