--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Cleverton ROcha </a>
+        <a class="navbar-brand js-scroll-trigger" href="#page-top"> CKR-Search engine optimization </a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -318,7 +318,7 @@
         </section>
 
         <section class="principal__projetos" id="projetos">
-            <h1 class="principal__projetos--titulo"> Port/Tecnologias </h1>
+            <h1 class="principal__projetos--titulo"> Tecnologias Caixa de areia </h1>
             <div class="container">
                 <ul class="principal__projetos--lista">
 			
@@ -389,7 +389,7 @@
                     <li class="item">
                         <a href="https://fullstack-cleverton.github.io/Loja_Virtual/#" target="_blank " rel="noopener noreferrer ">
                             <figure>
-                                <img src=" PNG " alt="Site  ">
+                               
                                 <figcaption>
                                      Loja Virtual 
                                 </figcaption>
@@ -453,7 +453,7 @@
                     <li class="item ">
                         <a href=" https://fullstack-cleverton.github.io/Card.dinamico/ " target="_blank " rel="noopener noreferrer ">
                             <figure>
-                              <img src=" https://raw.githubusercontent.com/fullstack-cleverton/fullstack-cleverton.github.io/master/img/redes-sociais.jpg  ">
+                             
                                 <figcaption> Card Carrossel dinâmico </figcaption>
                             </figure>
                         </a>
