--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
                         <b>@2019</b>
                         <em> Developer. </em>
                     </div>                    
-                    <a href="https://fullstack-cleverton.github.io" target="_blank" class="w3-hover-text-red"> ૮ℓ૯√૯૨Ƭѳท ૨ѳ૮ђα  </a>
+                    <a> class="w3-hover-text-red"> ૮ℓ૯√૯૨Ƭѳท ૨ѳ૮ђα Fim </a>
                 </p>
 
 
