--- a/index.html
+++ b/index.html
@@ -596,9 +596,9 @@
                     <div class="polling_message">
                         <a> Power by </a>
                         <b>@2019</b>
-                        <em> Developer. </em>
+                        <em> Cleverton Developer. </em>
                     </div>                    
-                    <a> class="w3-hover-text-red"> ૮ℓ૯√૯૨Ƭѳท ૨ѳ૮ђα Fim </a>
+                    <a> Fim </a>
                 </p>
 
 
